@@ -776,6 +776,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|ipc
+operator|.
+name|RemoteException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|net
 operator|.
 name|DNS
@@ -6346,8 +6360,6 @@ block|{
 name|LocatedBlock
 name|loc
 init|=
-name|clientProto
-operator|.
 name|addBlock
 argument_list|(
 name|fileName
@@ -6474,10 +6486,162 @@ name|report
 argument_list|)
 expr_stmt|;
 block|}
+comment|// IBRs are asynchronously processed by NameNode. The next
+comment|// ClientProtocol#addBlock() may throw NotReplicatedYetException.
 block|}
 return|return
 name|prevBlock
 return|;
+block|}
+comment|/**      * Retry ClientProtocol.addBlock() if it throws NotReplicatedYetException.      * Because addBlock() also commits the previous block,      * it fails if enough IBRs are not processed by NameNode.      */
+DECL|method|addBlock (String src, String clientName, ExtendedBlock previous, DatanodeInfo[] excludeNodes, long fileId, String[] favoredNodes)
+specifier|private
+name|LocatedBlock
+name|addBlock
+parameter_list|(
+name|String
+name|src
+parameter_list|,
+name|String
+name|clientName
+parameter_list|,
+name|ExtendedBlock
+name|previous
+parameter_list|,
+name|DatanodeInfo
+index|[]
+name|excludeNodes
+parameter_list|,
+name|long
+name|fileId
+parameter_list|,
+name|String
+index|[]
+name|favoredNodes
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|30
+condition|;
+name|i
+operator|++
+control|)
+block|{
+try|try
+block|{
+return|return
+name|clientProto
+operator|.
+name|addBlock
+argument_list|(
+name|src
+argument_list|,
+name|clientName
+argument_list|,
+name|previous
+argument_list|,
+name|excludeNodes
+argument_list|,
+name|fileId
+argument_list|,
+name|favoredNodes
+argument_list|)
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|NotReplicatedYetException
+decl||
+name|RemoteException
+name|e
+parameter_list|)
+block|{
+if|if
+condition|(
+name|e
+operator|instanceof
+name|RemoteException
+condition|)
+block|{
+name|String
+name|className
+init|=
+operator|(
+operator|(
+name|RemoteException
+operator|)
+name|e
+operator|)
+operator|.
+name|getClassName
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|className
+operator|.
+name|equals
+argument_list|(
+name|NotReplicatedYetException
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+condition|)
+block|{
+throw|throw
+name|e
+throw|;
+block|}
+block|}
+try|try
+block|{
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|100
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|ie
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"interrupted while retrying addBlock."
+argument_list|,
+name|ie
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"failed to add block."
+argument_list|)
+throw|;
 block|}
 comment|/**      * Does not require the argument      */
 annotation|@
